--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-  "predef": ["describe", "it", "expect"],
+  "predef": ["describe", "it", "expect", "angular"],
   "esnext": false,
   "bitwise": true,
   "curly": true,
@@ -10,7 +10,6 @@
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
-  "regexp": true,
   "undef": true,
   "unused": true,
   "strict": true,
