Add jasmine's beforeEach() and waitsFor() to jsHint globals

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-  "predef": ["describe", "it", "expect", "angular"],
+  "predef": ["describe", "it", "beforeEach", "waitsFor", "expect", "angular"],
   "esnext": false,
   "bitwise": true,
   "curly": true,
