--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/philippd/angular-deferred-bootstrap"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "test": "./node_modules/karma/bin/karma start karma.conf.js --single-run"
   },
   "author": {
@@ -16,17 +16,20 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "bower": "~1.2.8",
-    "karma": "~0.10.9",
-    "grunt-karma": "~0.6.x",
-    "grunt": "~0.4.3",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-contrib-concat": "~0.3.x",
-    "grunt-contrib-uglify": "~0.4.x",
-    "grunt-contrib-jshint": "~0.8.x",
-    "grunt-contrib-clean": "~0.5.0",
-    "load-grunt-tasks": "~0.4.0",
-    "grunt-express": "~0.3.3",
-    "express": "~3.2.4"
+    "bower": "~1.3.8",
+    "karma": "~0.12.19",
+    "karma-firefox-launcher": "0.1.3",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-jasmine": "0.1.5",
+    "grunt-karma": "0.8.3",
+    "grunt": "~0.4.5",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-contrib-concat": "0.5.0",
+    "grunt-contrib-uglify": "0.5.1",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-clean": "0.6.0",
+    "load-grunt-tasks": "0.6.0",
+    "grunt-express": "1.4.1",
+    "express": "4.7.2"
   }
 }
