--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "karma-firefox-launcher": "0.1.3",
     "karma-phantomjs-launcher": "0.1.4",
     "karma-jasmine": "0.1.5",
+    "karma-coverage": "~0.2.5",
+    "karma-coveralls": "~0.1.4",
     "grunt-karma": "0.8.3",
     "grunt": "~0.4.5",
     "grunt-contrib-watch": "0.6.1",
