Fixed bug when injecting $location.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-  "predef": ["describe", "it", "beforeEach", "waitsFor", "expect", "angular"],
+  "predef": ["describe", "it", "beforeEach", "waitsFor", "expect", "angular", "spyOn", "jasmine"],
   "esnext": false,
   "bitwise": true,
   "curly": true,
