add dependencies and main to bower,json
The bower.json needs a range of small fixes:

    I added the  main file entry to ./src/deferred-bootstrap.js.
    Furthermore the dependencies should be filled out. I assume the module requires some version of angular.

Why is it important?

The answer is that it is important for build tools, so that they can manage automatically dependencies and build me a vendor.js file by specifying all the dependencies just in bower.json

Look at:
https://github.com/ck86/main-bower-files

My gulpfile would look then

```javascript
var gulp = require('gulp');
var mainBowerFiles = require('main-bower-files');
var gulpFilter = require('gulp-filter');
var concat = require('gulp-concat');
var sourcemaps = require('gulp-sourcemaps');

gulp.task('vendor-js',function() {
    var bower_files = mainBowerFiles();
     var js_filter = gulpFilter(['*.js']);
      return gulp.src(bower_files).
          pipe(debug())
      .pipe(js_filter)
        .pipe(sourcemaps.init())
          .pipe(concat('vendor.js'))
        .pipe(sourcemaps.write('.'))
        .pipe(gulp.dest('www/lib/'));
});

```javascript

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,10 @@
     "test",
     "tests"
   ],
+  "main":"./src/deferred-bootstrap.js",
+   "dependencies": {
+    "angular": ">=1.2.21"
+  },
   "devDependencies": {
     "angular": "1.2.21",
     "angular-mocks": "1.2.21"
